# cookiecutter-farp-stack

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
hooks/templates/: model.py.jinja  routes.py.jinja
{{ cookiecutter.project_slug }}/: .gitignore  README.md  compose.yml
{{ cookiecutter.project_slug }}/docs/: design.md
{{ cookiecutter.project_slug }}/services/be/: Dockerfile  README.md  alembic.ini  pyproject.toml
{{ cookiecutter.project_slug }}/services/be/app/: config.py  db.py  main.py
{{ cookiecutter.project_slug }}/services/be/app/helpers/: load_test_data.py
{{ cookiecutter.project_slug }}/services/be/migrations/: env.py
{{ cookiecutter.project_slug }}/services/be/tests/: conftest.py
{{ cookiecutter.project_slug }}/services/fe/: Dockerfile
{{ cookiecutter.project_slug }}/services/fe/app/: package-lock.json
