[tool.poetry]
name = {{ cookiecutter.project_slug }}
version = "0.1.0"
description = "backend for {{ cookiecutter.project_name }}, an {{ cookiecutter.project_description}}"
authors = [{{ cookiecutter.author }}]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlmodel = "^0.0.22"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
alembic = "^1.14.0"
pint = "^0.24.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.start:run"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    # "integration",
]

[tool.coverage.run]
omit = [
    "/usr/lib/*",
    "tests/*",
]
